--- a/about.html
+++ b/about.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About Us | Secutron IT</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <header>
+    <div class="container">
+      <a href="index.html" class="logo">SecutronIT</a>
+      <nav>
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="industries.html">Industries</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="content">
+      <h1>Who We Are</h1>
+      <p>Secutron IT is an IT consultancy firm dedicated to helping businesses secure and optimize their IT infrastructure.</p>
+      <h2>Our Mission</h2>
+      <p>To deliver reliable, scalable, and secure technology solutions for modern enterprises.</p>
+      <h2>Our Team</h2>
+      <p>Our consultants are certified professionals with experience in Fortune 500 environments.</p>
+    </section>
+  </main>
+
+  <footer>
+  <p>© 2025 SecutronIT. All rights reserved.</p>  
+  </footer>
+</body>
+</html>
 
