--- a/services.html
+++ b/services.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secutron IT Services</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Services | Secutron IT</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+  <header>
+      <div class="container">
+      <a href="index.html" class="logo">SecutronIT</a>
+      <nav>
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="industries.html">Industries</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <header>
-        <h1>Secutron IT</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="services">
-        <h2>Our Services</h2>
-        <div class="service-container">
-            <div class="service">
-                <img src="assets/images/NS.jpg" alt="Network Security">
-                <h3>Network Security</h3>
-                <p>We provide enterprise-level network security using Palo Alto, Cisco, Fortinet, and more.</p>
-            </div>
-            <div class="service">
-                <img src="assets/images/CS.jpg" alt="Cloud Security">
-                <h3>Cloud Security</h3>
-                <p>Protect your cloud infrastructure with Oracle Cloud and Microsoft Azure security solutions.</p>
-            </div>
-            <div class="service">
-                <img src="assets/images/IAM.jpg" alt="Microsoft Security">
-                <h3>Microsoft Security Solutions</h3>
-                <p>We specialize in Entra ID, Microsoft Purview, Identity Governance, and Endpoint Security.</p>
-            </div>
+  <main>
+    <section class="content">
+      <h1>Our Services</h1>
+      <div class="grid">
+        <div class="card">
+          <h3>Network Security</h3>
+          <p>Implementing firewalls, VPNs, and endpoint protection using Palo Alto, Cisco, Fortinet, and more.</p>
         </div>
+        <div class="card">
+          <h3>Cloud Security</h3>
+          <p>Securing data and access in Azure and Oracle Cloud Infrastructure environments.</p>
+        </div>
+        <div class="card">
+          <h3>Microsoft Solutions</h3>
+          <p>Specialized support in Entra ID, Purview, and Microsoft Security & Identity Governance.</p>
+        </div>
+      </div>
     </section>
+  </main>
 
-    <footer>
-        <p>© 2025 Secutron IT. All Rights Reserved.</p>
-    </footer>
-
+  <footer>
+      <p>© 2025 Secutron IT. All rights reserved.</p>
+  </footer>
 </body>
 </html>
