--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Secutron IT | Home</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <header>
@@ -32,5 +32,6 @@
   <footer>
     <p>© 2025 Secutron IT. All rights reserved.</p>
   </footer>
+  <script src="assets/js/scripts.js"></script>
 </body>
 </html>
