--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Services | Secutron IT</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <header>
@@ -45,5 +45,6 @@
   <footer>
       <p>© 2025 Secutron IT. All rights reserved.</p>
   </footer>
+  <script src="assets/js/scripts.js"></script>
 </body>
 </html>
