--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container">
       <a href="index.html" class="logo">
-  <img src="assets/images/logo.png" alt="Secutron IT Logo" />
+  <img src="assets/images/logo.jpg" alt="Secutron IT Logo" />
 </a>
       <nav>
         <ul>
