--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
 <body>
   <header>
   <div class="container">
-      <a href="index.html" class="logo">Secutron IT</a>
+      <a href="index.html" class="logo">
+  <img src="assets/images/logo.jpg" alt="Secutron IT Logo" />
+</a>
       <nav>
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
