--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
       <nav>
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li class="dropdown">
+          <a href="services.html" class="dropbtn">Services</a>
+          <div class="dropdown-content">
+          <a href="service1.html">Service 1</a>
+          <a href="service2.html">Service 2</a>
+          <a href="service3.html">Service 3</a>
+      </div>
+      </li>
+      <li><a href="about.html">About</a></li>    
+      <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
