--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <li class="dropdown">
             <a href="services.html" class="dropbtn">Services</a>
             <div class="dropdown-content">
-              <a href="service1.html">Service 1</a>
-              <a href="service2.html">Service 2</a>
+              <a href="service1.html">Security</a>
+              <a href="service2.html">Microsoft</a>
               <a href="service3.html">Service 3</a>
             </div>
           </li>
