--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <a href="index.html" class="logo">
+    <div class="header-container">
+    <div class="logo">
+      <a href="index.html">
         <img src="assets/images/logo.jpg" alt="Secutron IT Logo" />
       </a>
-      <nav>
-        <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li class="dropdown">
-            <a href="services.html" class="dropbtn">Services</a>
-            <div class="dropdown-content">
-              <a href="service1.html">Security</a>
-              <a href="service2.html">Microsoft</a>
-              <a href="service3.html">Service 3</a>
-            </div>
-          </li>
-          <li><a href="about.html">About</a></li>    
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
     </div>
+    <nav class="main-nav">
+      <ul>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li class="dropdown">
+          <a href="services.html" class="dropbtn">Services</a>
+          <div class="dropdown-content">
+            <a href="service1.html">Security</a>
+            <a href="service2.html">Microsoft</a>
+            <a href="service3.html">Service 3</a>
+          </div>
+        </li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   </header>
 
   <main>
